fix: post section layout problems

--- a/frontend/src/components/cards/PostCard/PostCard.css
+++ b/frontend/src/components/cards/PostCard/PostCard.css
@@ -1,6 +1,6 @@
 .post-card {
   border-radius: 1rem;
-  width: 412px;
+
   background-color: var(--charcoal-color);
   color: var(--coffee-pot-color);
 }
